# ddPrimer

./: .gitignore  Primer Designer_M1.py  Primer Designer_M2.py  Primer Designer_V1.py  Primer Designer_V2.py  Primer Designer_V3.py  Primer Designer_V4.py  README.md  Setup.py  Setup_HPC.py  code_guide.md  coding_standards.md  config.py  ddPrimer HPC.py  ddPrimer.py  ddPrimer_V1.py  ddPrimer_V2.py  ddPrimer_V3.py  ddPrimer_V4.py  ddPrimer_V5.py  ddPrimer_V6.py  pipeline.py  pyproject.toml  setup.py  snp_masking_test.py  snp_masking_test_alignment.py  snp_masking_test_direct.py  test_logging_fix.py
Package/: __init__.py  config.py  pipeline.py
Package/core/: annotation_processor.py  primer_processor.py
Package/cross_species/: __init__.py  cross_species_workflow.py
Package/utils/: blast_db_creator.py
Test files/: C24_test.fna  Ler.fna  Test1.vcf  Test2.vcf
core/: SNP_masking_processor.py  __init__.py  annotation_processor.py  blast_processor.py  nupack_processor.py  primer3_processor.py  primer_processor.py
ddprimer/: Test.py  __init__.py  config.py  main.py  pipeline.py
ddprimer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ddprimer/Primers/: ref_from_maf.fasta
ddprimer/alignment/: __init__.py  alignment_workflow.py
ddprimer/config/: __init__.py  config.py  config_display.py  exceptions.py  logging_config.py  template_generator.py
ddprimer/core/: SNP_filter_processor.py  SNP_masking_processor.py  __init__.py  annotation_processor.py  blast_processor.py  filter_processor.py  nupack_processor.py  primer3_processor.py  primer_processor.py  sequence_processor.py  snp_processor.py  test.py  thermo_processor.py  vienna_processor.py
ddprimer/cross_species/: cross_species_workflow.py  lastz_runner.py  maf_parser.py
ddprimer/helpers/: __init__.py  alignment_workflow.py  direct_masking.py  lastz_runner.py  maf_parser.py  sequence_analyzer.py
ddprimer/modes/: __init__.py  alignment_mode.py  common.py  direct_mode.py  standard_mode.py
ddprimer/test_data/: VCF2.vcf  __init__.py
ddprimer/test_data/Alignments/: fasta1_vs_fasta2.maf
ddprimer/test_data/Primers/: Primers_Alignment.xlsx  Primers_Col.xlsx  Primers_Col_vs_Ler.xlsx  Primers_Sequences.xlsx  Primers_fasta1.xlsx  Primers_fasta1_vs_fasta2.xlsx
ddprimer/tests/: Sequences Kopie 2.xlsx  Sequences Kopie.xlsx  Sequences.xlsx  VCF1.vcf.gz.tbi  __init__.py  conftest.py  logging_override.py  pytest.ini  run_tests.py  test_helpers.py  test_pipeline.py
ddprimer/tests/Alignments/: fasta1_vs_fasta2.maf
ddprimer/tests/Primers/: Primers_Alignment.xlsx  Primers_Sequences.xlsx  Primers_fasta1.xlsx  Primers_fasta1_nupack.xlsx  Primers_fasta1_vs_fasta2.xlsx
ddprimer/tests/data/: __init__.py
ddprimer/tests/data/vcf/: VCF2.vcf.gz.tbi
ddprimer/tests/functional/: __init__.py  test_complete_workflow.py
ddprimer/tests/integration/: __init__.py  test_alignment_workflow.py  test_alignment_worklow.py  test_primer_design_workflow.py  test_snp_masking_workflow.py
ddprimer/tests/test_core/: __init__.py  test_primer_processor.py  test_sequence_processor.py
ddprimer/tests/test_modes/: __init__.py  test_alignment_mode.py  test_direct_mode.py  test_standard_mode.py
ddprimer/tests/test_utils/: __init__.py  test_blast_db_creator.py  test_common_utils.py  test_file_utils.py  test_sequence_utils.py
ddprimer/tests/units/: __init__.py  test_annotation_processor.py  test_blast_db_creator.py  test_blast_processor.py  test_blast_utilities.py  test_blast_verification.py  test_common_utils.py  test_db_selector.py  test_direct_masking.py  test_file_io.py  test_lastz_runner.py  test_maf_parser.py  test_model_organism_manager.py  test_nupack_processor.py  test_primer3_processor.py  test_primer_processor.py  test_sequence_analyzer.py  test_sequence_processor.py  test_sequence_utils.py  test_snp_masking_processor.py  test_thermo_processor.py  test_vienna_processor.py
ddprimer/utils/: __init__.py  blast_db_creator.py  blast_db_manager.py  blast_verification.py  chromosome_mapper.py  common_utils.py  db_selector.py  direct_mode.py  direct_mode_utils.py  file_io.py  file_preparator.py  file_utils.py  kmer_generator.py  model_organism_manager.py  selector.py  sequence_utils.py  snp_checker.py
test_files/: Col.fna  Direct.xlsx
test_files/Alignments/: Col_vs_Ler.maf
test_files/Primers/: Direct.xlsx  Primers_Col.xlsx  Primers_Direct.xlsx
test_files/Primers/Primers/: Primers_Direct.xlsx  ~$Primers_Direct.xlsx
utils/: __init__.py  file_utils.py  sequence_utils.py  ui_utils.py
