[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddprimer"
version = "0.1.0"
description = "A pipeline for designing primers optimized for droplet digital PCR with cross-species support"
readme = "README.md"
authors = [
    {name = "Jakob Wimmer", email = "globuds133@gmail.com"}  # Update with your actual email
]
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "biopython",
    "pandas",
    "numpy",
    "tqdm",
    "primer3-py",
    "openpyxl>=3.0.5",
    "wxpython",  # For GUI file selection
    "nupack",  # For thermodynamic calculations
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0", 
    "black>=20.8b1",
]

[project.urls]
Homepage = "https://github.com/jakobmueller/ddPrimer"  # Update with your actual username
Documentation = "https://github.com/jakobmueller/ddPrimer#readme"
"Bug Tracker" = "https://github.com/jakobmueller/ddPrimer/issues"

[project.scripts]
ddprimer = "ddprimer.pipeline:main"

[tool.setuptools]
packages = ["ddprimer"]

[tool.setuptools.package-data]
ddprimer = ["config/*.json", "config/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py312"]