[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddprimer"
version = "0.1.0"
description = "A pipeline for designing primers optimized for droplet digital PCR with cross-species support"
readme = "README.md"
authors = [
    {name = "Jakob Wimmer", email = "globuds133@gmail.com"}
]
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "biopython>=1.78",
    "pandas",
    "numpy",
    "tqdm",
    "primer3-py>=2.0.0",
    "openpyxl>=3.0.5",
    "wxpython",  # For GUI file selection
    "viennarna>=2.7.0",  # Default thermodynamics engine
    "colorama",  # For colored terminal output
    # Platform-specific dependencies for macOS
    "pyobjc-core;platform_system=='Darwin'",
    "pyobjc-framework-Cocoa;platform_system=='Darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0", 
    "black>=20.8b1",
]
thermo = [
    "nupack>=4.0.0",  # Optional, can be installed manually if pip install fails
    "viennarna>=2.7.0",  # Can be installed via pip
]

[project.urls]
Homepage = "https://github.com/jakobmueller/ddPrimer"
Documentation = "https://github.com/jakobmueller/ddPrimer#readme"
"Bug Tracker" = "https://github.com/jakobmueller/ddPrimer/issues"

[project.scripts]
ddprimer = "ddprimer.pipeline:main"

[tool.setuptools]
packages = ["ddprimer"]

[tool.setuptools.package-data]
ddprimer = ["config/*.json", "config/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py312"]